Enhance enemy spawning mechanics and camera behavior for smoother gameplay; update UI to reflect total waves and improve joystick positioning for better mobile usability.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div id="top-bar">
                 <div id="stats-summary">
                     <div class="stat-box">HP: <span id="hp-display">100/100</span></div>
-                    <div class="stat-box">Stage: <span id="stage-display">1</span> - <span id="wave-display">1</span>/10</div>
+                    <div class="stat-box">Stage: <span id="stage-display">1</span> - <span id="wave-display">1</span>/<span id="wave-total">10</span></div>
                 </div>
                 <div id="controls-top">
                     <button id="pause-btn" class="icon-btn">⏸</button>
