Add sound effects management system for UI interactions; integrate sound feedback for game events and enhance user experience with sound toggle functionality.

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                 <div id="controls-top">
                     <button id="pause-btn" class="icon-btn">⏸</button>
                     <button id="stats-btn" class="icon-btn">📊</button>
+                    <button id="sound-btn" class="icon-btn" title="音效">🔊</button>
                 </div>
             </div>
 
