Implement meta skill upgrades system for out-of-run progression, allowing players to enhance skills with shards. Update save manager to track skill upgrades and ensure data integrity. Enhance UI with a dedicated skill upgrade section, including reset functionality and visual indicators for upgrade costs and effects.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
             <div id="skill-unlock-list"></div>
         </div>
 
+        <div id="skill-upgrade-section">
+            <h3>技能升级（局外成长）</h3>
+            <div class="skill-unlock-hint">消耗技能碎片对已解锁技能进行“局外强化”。这些强化会在每次进入局内时自动生效：伤害/范围/CD/数量/新机制。</div>
+            <div class="skill-upgrade-actions">
+                <button id="skill-upgrade-reset-btn" class="small-btn danger">重置局外升级（返还碎片）</button>
+            </div>
+            <div id="skill-upgrade-list"></div>
+        </div>
+
         <button id="shop-back-btn" class="big-btn" style="background-color: #757575;">返回主菜单</button>
     </div>
 
