Enhance game mechanics by introducing fixed boss encounters per stage and dynamic loot previews. Update player inventory system to allow item level adjustments upon addition. Revise UI to display boss and loot information, improving player experience and strategic planning. Update CSS for new layout elements related to boss and loot previews.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
                 <div class="stage-enemies-title">本关怪物</div>
                 <div id="stage-enemy-preview"></div>
 
+                <div class="stage-boss-title">本关 Boss（固定）</div>
+                <div id="stage-boss-preview"></div>
+
+                <div class="stage-loot-title">Boss 掉落</div>
+                <div id="stage-loot-preview"></div>
+
                 <div class="stage-difficulty-title">难度</div>
                 <div class="difficulty-row" id="difficulty-row">
                     <button class="diff-btn" data-diff="easy">新手</button>
